v0.0.1/modules/schema/pages/class/PerLengthSequenceImpedance.adoc
= `PerLengthSequenceImpedance`
:toclevels: 4


+++Sequence impedance and admittance parameters per unit length, for transposed lines of 1, 2, or 3 phases. For 1-phase lines, define x=x0=xself. For 2-phase lines, define x=xs-xm and x0=xs+xm.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PerLengthSequenceImpedance`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PerLengthLineParameter.adoc[`PerLengthLineParameter`]
*** xref::class/PerLengthImpedance.adoc[`PerLengthImpedance`]
**** *`PerLengthSequenceImpedance`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PerLengthSequenceImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















ACLineSegment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WireAssemblyInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}












PerLengthSequenceImpedance -> ACLineSegment: ACLineSegments


PerLengthSequenceImpedance -> WireAssemblyInfo: WireAssemblyInfo


PerLengthSequenceImpedance -> DiagramObject: DiagramObjects


PerLengthSequenceImpedance -> InstanceSet: InstanceSet


PerLengthSequenceImpedance -> Name: Names


PerLengthSequenceImpedance -> ChangeSetMember: PropertiesCIMDataObject


PerLengthSequenceImpedance -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<b0ch,`b0ch`>>
| 0..1
| xref::class/SusceptancePerLength.adoc[`SusceptancePerLength`]
| +++Zero sequence shunt (charging) susceptance, per unit of length.+++

| <<bch,`bch`>>
| 0..1
| xref::class/SusceptancePerLength.adoc[`SusceptancePerLength`]
| +++Positive sequence shunt (charging) susceptance, per unit of length.+++

| <<g0ch,`g0ch`>>
| 0..1
| xref::class/ConductancePerLength.adoc[`ConductancePerLength`]
| +++Zero sequence shunt (charging) conductance, per unit of length.+++

| <<gch,`gch`>>
| 0..1
| xref::class/ConductancePerLength.adoc[`ConductancePerLength`]
| +++Positive sequence shunt (charging) conductance, per unit of length.+++

| <<r,`r`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++Positive sequence series resistance, per unit of length.+++

| <<r0,`r0`>>
| 0..1
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++Zero sequence series resistance, per unit of length.+++

| <<x,`x`>>
| 0..1
| xref::class/ReactancePerLength.adoc[`ReactancePerLength`]
| +++Positive sequence series reactance, per unit of length.+++

| <<x0,`x0`>>
| 0..1
| xref::class/ReactancePerLength.adoc[`ReactancePerLength`]
| +++Zero sequence series reactance, per unit of length.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<WireAssemblyInfo,`WireAssemblyInfo`>>
| 0..1
| xref::class/WireAssemblyInfo.adoc[`WireAssemblyInfo`]
| n/a

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<ACLineSegments,`ACLineSegments`>>
| 0..*
| xref::class/ACLineSegment.adoc[`ACLineSegment`]
| +++All line segments described by this per-length impedance.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ACLineSegments]
=== `ACLineSegments`
+++All line segments described by this per-length impedance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthImpedance.ACLineSegments`
| Cardinality
| 0..*
| Type
| xref::class/ACLineSegment.adoc[`ACLineSegment`]

| Inherited from
| xref::class/PerLengthImpedance.adoc[`PerLengthImpedance`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#b0ch]
=== `b0ch`
+++Zero sequence shunt (charging) susceptance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.b0ch`
| Cardinality
| 0..1
| Type
| xref::class/SusceptancePerLength.adoc[`SusceptancePerLength`]


|===

//[discrete]
[#bch]
=== `bch`
+++Positive sequence shunt (charging) susceptance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.bch`
| Cardinality
| 0..1
| Type
| xref::class/SusceptancePerLength.adoc[`SusceptancePerLength`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#g0ch]
=== `g0ch`
+++Zero sequence shunt (charging) conductance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.g0ch`
| Cardinality
| 0..1
| Type
| xref::class/ConductancePerLength.adoc[`ConductancePerLength`]


|===

//[discrete]
[#gch]
=== `gch`
+++Positive sequence shunt (charging) conductance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.gch`
| Cardinality
| 0..1
| Type
| xref::class/ConductancePerLength.adoc[`ConductancePerLength`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r]
=== `r`
+++Positive sequence series resistance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.r`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]


|===

//[discrete]
[#r0]
=== `r0`
+++Zero sequence series resistance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.r0`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WireAssemblyInfo]
=== `WireAssemblyInfo`


[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthLineParameter.WireAssemblyInfo`
| Cardinality
| 0..1
| Type
| xref::class/WireAssemblyInfo.adoc[`WireAssemblyInfo`]

| Inherited from
| xref::class/PerLengthLineParameter.adoc[`PerLengthLineParameter`]


|===

//[discrete]
[#x]
=== `x`
+++Positive sequence series reactance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.x`
| Cardinality
| 0..1
| Type
| xref::class/ReactancePerLength.adoc[`ReactancePerLength`]


|===

//[discrete]
[#x0]
=== `x0`
+++Zero sequence series reactance, per unit of length.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthSequenceImpedance.x0`
| Cardinality
| 0..1
| Type
| xref::class/ReactancePerLength.adoc[`ReactancePerLength`]


|===


